paginas de recetas

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         </div>
         <div>
             <ul id="ul-nav">
-                <li class="navegador"><a class="nav" class="pagina-principal" href="./index.html">Recetas</a></li>
-                <li class="navegador"><a class="nav" href="">Agrega tu receta</a></li>
-                <li class="navegador"><a class="nav" href=""><img class="naver" src="./images/Nigth.jpg" alt=""></a></li>
+                <li class="navegador"><a class="nav" href="./indexform.html">Agrega tu receta</a></li>
+                <li class="navegador-image"><a class="nav" href=""><img class="naver" src="./images/Nigth.jpg" alt=""></a></li>
             </ul>
         </div>
     </nav>
