--- a/index2.html
+++ b/index2.html
@@ -20,17 +20,17 @@
             <ul id="ul-nav">
                 <li class="navegador"><a class="nav" class="pagina-principal" href="./index.html">Recetas</a></li>
                 <li class="navegador"><a class="nav" href="">Agrega tu receta</a></li>
-                <li class="navegador"><a class="nav" href=""><img class="naver" src="https://ih1.redbubble.net/image.4844309975.7319/flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" alt=""></a></li>
+                <li class="navegador-image"><a class="nav" href=""><img class="naver" src="./images/Nigth.jpg" alt=""></a></li>
             </ul>
         </div>
     </nav>
     <main class="container">
       <div class="main-container">
-        <img src="./images/Pabellon.jpg" alt="">
-        <h2>Simple Omelette</h2>
+        <img class="main-image" src="./images/Pabellon.jpg" alt="">
+        <h2 class="title-recets">Simple Omelette</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae placeat et dolor, quidem illum blanditiis suscipit hic, cumque alias optio asperiores animi! Ipsam, perspiciatis saepe velit tenetur reprehenderit necessitatibus id.</p>
         <div class="Preparation">
-          <h2>Preparation</h2>
+          <h2 class="title-recets">Preparation</h2>
           <ul>
             <li>Item 1 </li>
             <li>Item 2</li>
@@ -38,7 +38,7 @@
             <li>Item 4</li>
           </ul>
         </div>
-        <h2>Instructions</h2>
+        <h2 class="title-recets">Instructions</h2>
         <ol class="list-instructions">
           <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ex odit illo atque ipsum facilis obcaecati, veritatis ducimus commodi ea.</li>
           <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis officia nostrum sit hic cumque fuga, nisi repudiandae ab debitis esse libero explicabo ullam maxime rem iusto optio veritatis neque in magnam sint odio modi earum eius pariatur! Et, alias architecto.</li>
@@ -47,7 +47,7 @@
       </div>
       <div class="div-container">
         <div class="div-container-1">
-          <h2>Ingredients</h2>
+          <h2 class="title-recets">Ingredients</h2>
           <ul>
             <li>Huevo</li>
             <li>Leche</li>
@@ -56,27 +56,54 @@
             <li>queso</li>
           </ul>
           <table class="table">
-            <tr>
-              <td>Calories</td>
-              <td>277kcal</td>
+            <tr class="tr">
+              <td class="td1">Calories</td>
+              <td class="td2">277kcal</td>
             </tr>
-            <tr>
-              <td>Carbs</td>
-              <td>0g</td>
+            <tr class="tr">
+              <td class="td1">Carbs</td>
+              <td class="td2">0g</td>
             </tr>
-            <tr>
-              <td>Protein</td>
-              <td>20g</td>
+            <tr class="tr">
+              <td class="td1">Protein</td>
+              <td class="td2">20g</td>
             </tr>
-            <tr>
-              <td>Fat</td>
-              <td>22g</td>
+            <tr class="tr">
+              <td class="td1">Fat</td>
+              <td class="td2">22g</td>
             </tr>
           </table>
         </div>
         <div class="div-container-2">
-          <h3>More recipes</h3>
-          <img src="" alt="">
+          <h3 class="title-recets">More recipes</h3>
+          <div id="more-recipes">
+            <img class="more-images-recipes" src="./images/Hallaca.jfif" alt="">
+            <div>
+              <h4 class="more-recipes-title">Title recipe</h4>
+              <p>Recipes for eat</p>
+            </div>
+          </div>
+          <div id="more-recipes">
+            <img class="more-images-recipes" src="./images/Hallaca.jfif" alt="">
+            <div>
+              <h4 class="more-recipes-title">Title recipe</h4>
+              <p>Recipes for eat</p>
+            </div>
+          </div>
+          <div id="more-recipes">
+            <img class="more-images-recipes" src="./images/Hallaca.jfif" alt="">
+            <div>
+              <h4 class="more-recipes-title">Title recipe</h4>
+              <p>Recipes for eat</p>
+            </div>
+          </div>
+          <div id="more-recipes">
+            <img class="more-images-recipes" src="./images/Hallaca.jfif" alt="">
+            <div>
+              <h4 class="more-recipes-title">Title recipe</h4>
+              <p>Recipes for eat</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
