--- a/indexform.html
+++ b/indexform.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style3.css">
   </head>
   <body id="body">
     <nav id="flex-container">
@@ -13,39 +14,41 @@
         </div>
         <div>
             <ul id="ul-nav">
-                <li class="navegador"><a class="nav" href="./indexform.html">Agrega tu receta</a></li>
+                <li class="navegador"><a class="nav" href="./index.html">Recetas</a></li>
                 <li class="navegador-image"><a class="nav" href=""><img class="naver" src="./images/Nigth.jpg" alt=""></a></li>
             </ul>
         </div>
     </nav>
     <main class="main">
-        <form action="">
+        <div id="main-container">
+        <h2 class="title-form"><b>Envianos tu receta</b></h2>
+        <p class="parrafo">They say everything looks better with odd numbers of things. But sometimes I put even numbers--just to upset the critics. Exercising the imagination, experimenting with talents, being creative; these things, to me, are truly the windows to your soul. </p>
+        <form action="#">
             <div>
-                <label for="nombre">Nombre</label>
-                <input type="text" name="nombre" id="nombre" />
+                <label for="nombre"><b>Nombre de la receta</b></label>
+                <input type="text" name="nombre-de-la-receta" id="nombre-de-la-receta" />
             </div>
             <div>
-                <label for="apellido">Apellido</label>
-                <input type="text" name="apellido" id="apellido" />
+                <label for="tiempo"><b>Tiempo de preparación</b></label>
+                <input type="text" name="tiempo-de-la-receta" id="tiempo-de-la-receta" />
             </div>
             <div>
-                <label for="contrasenia">Contraseña</label>
-                <input type="password" name="contrasenia" id="contrasenia" />
+                <label for="ingredientes"><b>Ingredientes</b></label>
+                <input type="text" name="Ingredientes" id="Ingredientes" />
             </div>
             <div>
-                <label for="edad">Edad</label>
-                <input type="number" id="edad" />
-                <small>Tu edad no cumple el mínimo</small>
-            </div>
-            <div>
-                <label for="">Estás en el Bootcamp?</label>
-                <input type="radio" name="bootcamp" id="bootcamp_si" /> True
-                <input type="radio" name="bootcamp" id="bootcamp_no" /> False
+                <label for="instrucciones"><b>Instrucciones</b></label>
+                <input type="text" name="Instrucciones" id="Instrucciones" />
             </div>
             <div>
                 <button type="submit">Enviar</button>
             </div>
         </form>
+        </div>
     </main>
+    <footer id="footer">
+        <a class="pagina-principal" href="./index.html">BitCook</a>
+        <h6>Derechos reservados</h6>
+    </footer>
   </body>
 </html>
