--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 	else {
 		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
 	}
-	// ]]>
 </script>
+
+<script src="./js/script.js"></script>
+
 </body>
 </html>
