--- a/index4.html
+++ b/index4.html
@@ -26,9 +26,9 @@
     </nav>
     <main class="container">
       <div class="main-container">
-        <img class="main-image" src="./images/Pabellon.jpg" alt="">
-        <h2 class="title-recets">Simple Omelette</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae placeat et dolor, quidem illum blanditiis suscipit hic, cumque alias optio asperiores animi! Ipsam, perspiciatis saepe velit tenetur reprehenderit necessitatibus id.</p>
+        <img class="main-image" src="./images/Arepa-reina-pepiada.webp" alt="">
+        <h2 class="title-recets">Arepa Reina Pepiada</h2>
+        <p>Receta fácil para preparar la famosa arepa reina pepiada en casa. Esta deliciosa arepa venezolana lleva un relleno de pollo con aguacate.Tiene una textura, cremosidad y frescura que no la tiene ninguna otra arepa.</p>
         <div class="Preparation">
           <h2 class="title-recets">Preparation</h2>
           <ul>
@@ -77,30 +77,30 @@
         <div class="div-container-2">
           <h3 class="title-recets">More recipes</h3>
           <div id="more-recipes">
-            <img class="more-images-recipes" src="./images/Hallaca.jfif" alt="">
+            <a href="./index3.html"><img class="more-images-recipes" src="./images/Hallaca.jfif" alt=""></a>
             <div>
-              <h4 class="more-recipes-title">Title recipe</h4>
+              <h4 class="more-recipes-title"><a class="more-recipes-title-a" href="./index3.html">Hallaca</a></h4>
               <p>Recipes for eat</p>
             </div>
           </div>
           <div id="more-recipes">
-            <img class="more-images-recipes" src="./images/Hallaca.jfif" alt="">
+            <a href="./index7.html"><img class="more-images-recipes" src="./images/Cachapa.jpg" alt=""></a>
             <div>
-              <h4 class="more-recipes-title">Title recipe</h4>
+              <h4 class="more-recipes-title"><a class="more-recipes-title-a" href="./index7.html">Cachapa</a></h4>
               <p>Recipes for eat</p>
             </div>
           </div>
           <div id="more-recipes">
-            <img class="more-images-recipes" src="./images/Hallaca.jfif" alt="">
+            <a href="./index5.html"><img class="more-images-recipes" src="./images/Chicha.jpg" alt=""></a>
             <div>
-              <h4 class="more-recipes-title">Title recipe</h4>
+              <h4 class="more-recipes-title"><a class="more-recipes-title-a" href="./index5.html">Chicha</a></h4>
               <p>Recipes for eat</p>
             </div>
           </div>
           <div id="more-recipes">
-            <img class="more-images-recipes" src="./images/Hallaca.jfif" alt="">
+            <a href="./index6.html"><img class="more-images-recipes" src="./images/Cachito.webp" alt=""></a>
             <div>
-              <h4 class="more-recipes-title">Title recipe</h4>
+              <h4 class="more-recipes-title"><a class="more-recipes-title-a" href="./index6.html">Cachito</a></h4>
               <p>Recipes for eat</p>
             </div>
           </div>
